[MacCatalyst] Various build fixes https://bugs.webkit.org/show_bug.cgi?id=233995

Unreviewed.

Source/WebCore:

No new tests because there is no behavior change.

* Modules/speech/cocoa/SpeechRecognizerCocoa.mm:
(WebCore::SpeechRecognizer::dataCaptured):
* platform/mediarecorder/cocoa/AudioSampleBufferCompressor.mm:
(WebCore::AudioSampleBufferCompressor::processSampleBuffersUntilLowWaterTime):

Source/WebKit:

* UIProcess/WebPageProxy.cpp:
(WebKit::mediaRelatedMachServices):


Canonical link: https://commits.webkit.org/244962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286649 268f45cc-cd09-0410-ab3c-d52691b4dbfc